included a frequency domain waveform for the ringdown - still very buggy though ...

--- a/lalinference/src/Makefile.am
+++ b/lalinference/src/Makefile.am
@@ -60,6 +60,7 @@ liblalinference_la_SOURCES = \
 	LALInferenceKDE.c \
 	LALInferenceInitBurst.c \
 	LALInferenceInitCBC.c \
+        LALInferenceInitRingdown.c \
 	LALInferenceVCSInfo.c \
 	LALInferenceRemoveLines.c \
 	LALInferenceCalibrationErrors.c \
